--- a/public/style.css
+++ b/public/style.css
@@ -2513,3 +2513,9 @@ body {
   font-size: 3em;
   margin-left: 55%;
   cursor: pointer; }
+
+.spacing-row {
+  padding: 500px 20px 20px 20px; }
+
+.homepage-title {
+  font-size: 1.5em; }
