--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,3 +50,11 @@
   margin-left: 55%;
   cursor: pointer;
 }
+
+.spacing-row {
+  padding: 500px 20px 20px 20px;
+}
+
+.homepage-title {
+  font-size: 1.5em;
+}
