--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,7 @@
 
 
 .sub-heading:hover  .vertical-titles {
-    color: black;
+    color: red;
 }
 
 // .vertical-titles:hover {
@@ -55,6 +55,8 @@
   padding: 500px 20px 20px 20px;
 }
 
-.homepage-title {
-  font-size: 1.5em;
+#homepage-title {
+  font-size: 2em;
+  font-family: 'Anton', sans-serif;
+
 }
