working on About page

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -46,8 +46,8 @@
   cursor: pointer;
 }
 
-.spacing-row {
-  padding: 500px 20px 20px 20px;
+.title-and-social-row {
+  padding: 450px 20px 20px 20px;
 }
 
 #homepage-title {
