--- a/scss/_css-grid.scss
+++ b/scss/_css-grid.scss
@@ -15,7 +15,7 @@ body {
 }
 
 .col {
-  outline: 1px solid blue;
+  // outline: 1px solid blue;
   min-height: 40px;
   margin-left: 2.4%;
   margin-right: 2.4%;
