--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -10,7 +10,6 @@
 
 .vertical-titles {
   writing-mode: vertical-rl;
-  // text-orientation: sideways-right;
   font-family: 'Source Sans Pro', sans-serif;
   color: #AAA;
   transition: all 0.8s linear;
@@ -26,10 +25,6 @@
     color: red;
 }
 
-// .vertical-titles:hover {
-//   color: black;
-// }
-
 
 .ball {
   width: 60px;
@@ -41,7 +36,6 @@
   line-height: 1.2em;
   font-family: 'Roboto Mono', monospace;
   font-size: 3em;
-  // margin-top: -12px;
   margin-left: 55%;
   cursor: pointer;
 }
@@ -53,5 +47,50 @@
 #homepage-title {
   font-size: 2em;
   font-family: 'Anton', sans-serif;
+
+}
+
+#homepage-title-responsive {
+  display: none;
+}
+
+@media (max-width:768px) {
+
+  .vertical-titles {
+    writing-mode: initial;
+    border: 1px solid black;
+    margin-left: 0%;
+    text-align: center;
+  }
+
+  .solid-horizontal-rope {
+    border-top: 3px solid black;
+    margin-top: -40px;
+  }
+
+  .ball {
+    display: none;
+  }
+
+  #homepage-title {
+    display: none;
+  }
+
+  #homepage-title-responsive {
+    font-size: 2em;
+    font-family: 'Anton', sans-serif;
+    display:block;
+    text-align: center;
+  }
+
+  .sub-heading.social {
+    margin-bottom: -60px;
+  }
+
+  .title-and-social-row {
+    padding: 0px 20px 20px 20px;
+    text-align: center;
+    width: 100%;
+  }
 
 }
