changed color of main-grid

--- a/public/style.css
+++ b/public/style.css
@@ -3665,7 +3665,7 @@ body.stop-scrolling {
     display: none; } }
 
 .main-grid {
-  background-color: #f0f8ff; }
+  background-color: #DADADA; }
 
 .list-1 a {
   text-decoration: none;
